--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <nav class="navbar">
                         <ul class="navbar_list">
                             <li class="navbar_item"><a href="#" class="navbar_item_link">Обо мне</a></li>
-                            <li class="navbar_item">
+                            <li class="navbar_item dropdown_arrow1">
                                 <a href="#" class="navbar_item_link">SEO</a>
                                 <img class="dropdown_arrow  dropdown_arrow1" src="./img/down-arrow.svg" alt="">
                                 <div class="dropdown_content dropdown_content1">
