--- a/index.html
+++ b/index.html
@@ -775,6 +775,7 @@
     });
 </script>
 <script src="js/main.js"></script>
+<script src="js/slide2.js"></script>
 <script src="js/slide.js"></script>
 
 </body>
